--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kirby-seo-report",
+  "name": "kirby-seo-insights",
   "type": "module",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "PLAYGROUND=true kirbyup serve src/panel/index.js",
     "build": "kirbyup src/panel/index.js",
-    "build:assets": "vite build --config src/assets/yoastseo/vite.config.js && vite build --config src/assets/string-pixel-width/vite.config.js",
+    "build:assets": "vite build --config src/assets/yoastseo/vite.config.js && vite build --config src/assets/jed/vite.config.js && vite build --config src/assets/string-pixel-width/vite.config.js",
     "build:playground": "PLAYGROUND=true pnpm run build && pnpm run build:assets",
     "readme:dev": "vitepress dev readme",
     "readme:build": "vitepress build readme",
