refactor: testes throttle fn

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "^1.71.1",
     "string-pixel-width": "^1.11.0",
     "tailwindcss": "^3.4.1",
+    "throttleit": "^2.0.0",
     "ufo": "^1.4.0",
     "vite": "^5.1.6",
     "vite-plugin-node-polyfills": "^0.21.0",
