--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,7 @@ playground/ export-ignore
 
 # Development files
 .vscode/ export-ignore
+tools/ export-ignore
 .editorconfig export-ignore
 composer.lock export-ignore
 eslint.config.js export-ignore
