--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,12 @@
     "getkirby/composer-installer": "^1.2",
     "vlucas/phpdotenv": "^5.6"
   },
-  "require-dev": {
-    "friendsofphp/php-cs-fixer": "@stable"
-  },
   "scripts": {
     "dev": [
       "Composer\\Config::disableProcessTimeout",
       "@php -S localhost:8000 -t playground/public vendor/getkirby/cms/router.php"
     ],
-    "fix": "php-cs-fixer fix",
+    "csfix": "@php tools/phpcs/vendor/bin/php-cs-fixer fix",
     "dist": "composer install --no-dev --optimize-autoloader"
   },
   "config": {
