--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.4.2",
   "private": true,
-  "packageManager": "pnpm@8.15.4",
+  "packageManager": "pnpm@8.15.5",
   "scripts": {
     "dev": "PLAYGROUND=true kirbyup serve src/panel/index.js",
     "build": "kirbyup src/panel/index.js",
@@ -17,25 +17,25 @@
     "release": "bumpp --all"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.8.1",
-    "autoprefixer": "^10.4.18",
+    "@antfu/eslint-config": "^2.9.0",
+    "autoprefixer": "^10.4.19",
     "bumpp": "^9.4.0",
     "eslint": "^8.57.0",
-    "happy-dom": "^13.7.8",
+    "happy-dom": "^13.10.1",
     "jed": "^1.1.1",
     "kirbyup": "^3.1.5",
     "kirbyuse": "^0.4.1",
     "ohash": "^1.1.3",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
-    "sass": "^1.71.1",
+    "sass": "^1.72.0",
     "string-pixel-width": "^1.11.0",
     "tailwindcss": "^3.4.1",
     "throttleit": "^2.0.0",
-    "ufo": "^1.4.0",
-    "vite": "^5.1.6",
+    "ufo": "^1.5.3",
+    "vite": "~5.1.6",
     "vite-plugin-node-polyfills": "^0.21.0",
-    "vitest": "^1.3.1",
+    "vitest": "^1.4.0",
     "yoastseo": "^1.91.2"
   },
   "pnpm": {
