--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
     }
   ],
   "require": {
+    "getkirby/composer-installer": "^1.2"
+  },
+  "require-dev": {
     "getkirby/cms": "^4.1",
-    "getkirby/composer-installer": "^1.2",
     "vlucas/phpdotenv": "^5.6"
   },
   "scripts": {
