--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,14 @@
   "name": "johannschopplich/kirby-seo-audit",
   "description": "State-of-the-art SEO analysis for Kirby CMS",
   "type": "kirby-plugin",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "keywords": [
     "getkirby",
     "kirby",
     "seo",
     "yoast"
   ],
-  "license": "PROPRIETARY",
+  "license": "Kirby SEO Audit Plugin License Agreement",
   "homepage": "https://kirbyseo.com",
   "authors": [
     {
