--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier \"src/panel/**\" --write",
-    "archive": "git archive --format=zip --output=./kirby-seo-audit-$(git describe --tags).zip HEAD",
-    "release": "pnpm run build && pnpm run build:assets && bumpp --all && pnpm run archive"
+    "release": "pnpm run build && pnpm run build:assets && bumpp --all --execute \"npx zx scripts/pre-release.mjs\" && zx scripts/post-release.mjs"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.9.0",
@@ -36,7 +35,8 @@
     "vite": "~5.1.6",
     "vite-plugin-node-polyfills": "^0.21.0",
     "vitest": "^1.4.0",
-    "yoastseo": "^1.91.2"
+    "yoastseo": "^1.91.2",
+    "zx": "^8.0.1"
   },
   "pnpm": {
     "overrides": {
