--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     }
   ],
   "require": {
-    "getkirby/composer-installer": "^1.2"
+    "getkirby/composer-installer": "^1.2",
+    "johannschopplich/kirby-tools-licensing": "^0.2"
   },
   "require-dev": {
     "getkirby/cms": "^4",
