--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.6.0",
   "private": true,
-  "packageManager": "pnpm@9.1.1",
+  "packageManager": "pnpm@9.3.0",
   "scripts": {
     "dev": "PLAYGROUND=true kirbyup serve src/panel/index.js",
     "build": "kirbyup src/panel/index.js",
@@ -16,27 +16,28 @@
     "release": "pnpm run build && pnpm run build:assets && bumpp --all --execute \"npx zx scripts/pre-release.mjs\" && zx scripts/post-release.mjs"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.17.0",
+    "@antfu/eslint-config": "^2.21.1",
+    "@kirby-tools/licensing": "^0.1.9",
     "autoprefixer": "^10.4.19",
     "bumpp": "^9.4.1",
-    "eslint": "^9.2.0",
-    "happy-dom": "^14.10.1",
+    "eslint": "^9.5.0",
+    "happy-dom": "^14.12.0",
     "jed": "^1.1.1",
-    "kirbyup": "^3.1.5",
+    "kirbyup": "^3.1.6",
     "kirbyuse": "^0.4.1",
     "ohash": "^1.1.3",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "sass": "^1.77.1",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.4",
+    "sass": "^1.77.5",
     "string-pixel-width": "^1.11.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "throttleit": "^2.0.0",
     "ufo": "^1.5.3",
     "vite": "~5.1.7",
-    "vite-plugin-node-polyfills": "^0.21.0",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vitest": "^1.6.0",
     "yoastseo": "^1.91.2",
-    "zx": "^8.0.2"
+    "zx": "^8.1.2"
   },
   "pnpm": {
     "overrides": {
