--- a/playground/site/blueprints/site.yml
+++ b/playground/site/blueprints/site.yml
@@ -71,6 +71,7 @@ columns:
             options:
               en: English
               de: German
+              nl: Dutch
             help: Will use the user's Panel language in the production version.
             width: 1/2
           links:
