--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "2.0.2",
   "private": true,
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.11.0",
   "scripts": {
     "dev": "PLAYGROUND=true kirbyup serve src/panel/index.js",
     "build": "kirbyup src/panel/index.js",
@@ -16,28 +16,28 @@
     "release": "pnpm run build && pnpm run build:assets && bumpp --all --execute \"npx zx scripts/pre-release.mjs\" && zx scripts/post-release.mjs"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.3.0",
+    "@antfu/eslint-config": "^4.13.1",
     "@kirby-tools/licensing": "^0.5.2",
-    "autoprefixer": "^10.4.20",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.21.0",
-    "happy-dom": "^17.1.8",
+    "autoprefixer": "^10.4.21",
+    "bumpp": "^10.1.1",
+    "eslint": "^9.27.0",
+    "happy-dom": "^17.4.7",
     "jed": "^1.1.1",
-    "kirbyup": "^3.2.1",
-    "kirbyuse": "^0.11.3",
-    "ohash": "^1.1.4",
-    "prettier": "^3.5.2",
+    "kirbyup": "^3.3.0",
+    "kirbyuse": "^0.12.1",
+    "ohash": "^1.1.6",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.85.1",
+    "sass": "^1.89.0",
     "string-pixel-width": "^1.11.0",
     "tailwindcss": "^3.4.17",
     "throttleit": "^2.1.0",
-    "ufo": "^1.5.4",
-    "vite": "~5.4.14",
+    "ufo": "^1.6.1",
+    "vite": "~5.4.19",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "vitest": "^3.0.7",
+    "vitest": "^3.1.3",
     "yoastseo": "^1.91.2",
-    "zx": "^8.3.2"
+    "zx": "^8.5.4"
   },
   "pnpm": {
     "overrides": {
@@ -45,7 +45,11 @@
     },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
-      "esbuild"
+      "esbuild",
+      "unrs-resolver"
+    ],
+    "ignoredBuiltDependencies": [
+      "node-sass"
     ]
   }
 }
