refactor: update URLs and license references to use kirby.tools

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "yoast"
   ],
   "license": "proprietary",
-  "homepage": "https://kirbyseo.com",
+  "homepage": "https://kirby.tools/seo-audit",
   "authors": [
     {
       "name": "Johann Schopplich",
