--- a/playground/site/blueprints/site.yml
+++ b/playground/site/blueprints/site.yml
@@ -1,7 +1,7 @@
 title: Playground
 
 options:
-  preview: https://kirbyseo.com
+  preview: https://kirby.tools/seo-audit
 
 columns:
   - width: 1/2
