--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "type": "module",
   "version": "2.1.1",
   "private": true,
-  "packageManager": "pnpm@10.12.3",
+  "packageManager": "pnpm@10.15.1",
   "scripts": {
     "dev": "PLAYGROUND=true kirbyup serve src/panel/index.js",
     "build": "kirbyup src/panel/index.js",
-    "build:assets": "rm -rf assets && vite build --config src/assets/yoastseo/vite.config.js && vite build --config src/assets/yoastseo-translations/vite.config.js && vite build --config src/assets/jed/vite.config.js && vite build --config src/assets/string-pixel-width/vite.config.js",
+    "build:assets": "rm -rf assets && vite build --config src/assets/yoastseo/vite.config.js && vite build --config src/assets/worker/vite.config.js",
     "build:playground": "PLAYGROUND=true pnpm run build && pnpm run build:assets",
+    "extract:messages": "node scripts/extract-translations.mjs && npx po2json messages.pot messages.json --format jed1.x --domain wordpress-seo && sed -i '' 's/\"wordpress-seo\\\\u0004/\"/g' messages.json",
     "test": "vitest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -16,40 +17,35 @@
     "release": "pnpm run build && pnpm run build:assets && bumpp --all --execute \"npx zx scripts/pre-release.mjs\" && zx scripts/post-release.mjs"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.16.1",
+    "@antfu/eslint-config": "^4.19.0",
     "@kirby-tools/licensing": "^0.5.2",
+    "@wordpress/i18n": "^5.26.0",
     "autoprefixer": "^10.4.21",
-    "bumpp": "^10.2.0",
-    "eslint": "^9.29.0",
+    "bumpp": "^10.2.3",
+    "eslint": "^9.34.0",
+    "gettext-extractor": "^4.0.1",
+    "gettext-parser": "^8.0.0",
     "happy-dom": "^18.0.1",
-    "jed": "^1.1.1",
     "kirbyup": "^3.3.0",
     "kirbyuse": "^0.12.1",
-    "ohash": "^1.1.6",
-    "prettier": "^3.6.0",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "sass": "^1.89.2",
-    "string-pixel-width": "^1.11.0",
+    "ohash": "^2.0.11",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.4.17",
     "throttleit": "^2.1.0",
+    "tinyglobby": "^0.2.14",
     "ufo": "^1.6.1",
     "vite": "~5.4.19",
-    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^3.2.4",
-    "yoastseo": "^1.91.2",
-    "zx": "^8.6.0"
+    "yoastseo": "^3.3.0",
+    "zx": "^8.8.1"
   },
   "pnpm": {
-    "overrides": {
-      "node-sass": "sass"
-    },
     "onlyBuiltDependencies": [
       "@parcel/watcher",
       "esbuild",
       "unrs-resolver"
-    ],
-    "ignoredBuiltDependencies": [
-      "node-sass"
     ]
   }
 }
