--- a/playground/site/blueprints/pages/article.yml
+++ b/playground/site/blueprints/pages/article.yml
@@ -1,7 +1,8 @@
 title: Article
 
 buttons:
-  seo-audit: true
+  seo-audit:
+    keyphraseField: metaKeyphrase
   preview: true
   settings: true
   status: true
@@ -26,10 +27,10 @@ tabs:
 
       - width: 1/3
         fields:
-          author:
-            label: Author
+          metaKeyphrase:
+            label: Focus Keyphrase
             type: text
-            help: The author's name
+            help: Enter the keyword or keyphrase you want the page to rank for in Google. Next, analyze the content of the page to see if search engines understand what it is about.
 
           publishDate:
             label: Publish Date
