--- a/playground/site/blueprints/pages/article-section.yml
+++ b/playground/site/blueprints/pages/article-section.yml
@@ -1,17 +1,17 @@
 title: Article
 
 buttons:
-  seo-audit:
-    keyphraseField: metaKeyphrase
   preview: true
   settings: true
   status: true
+
+preview: https://getkirby.com/features/developers
 
 tabs:
   content:
     label: Content
     columns:
-      - width: 2/3
+      - width: 1/2
         fields:
           content:
             label: Article Content
@@ -25,25 +25,20 @@ tabs:
               - code
             help: Build your article content with structured blocks
 
-      - width: 1/3
-        fields:
-          metaKeyphrase:
-            label: Focus Keyphrase
-            type: text
-            help: Enter the keyword or keyphrase you want the page to rank for in Google.
-
-          publishDate:
-            label: Publish Date
-            type: date
-            default: today
-            help: When this article was or will be published
-
-          excerpt:
-            label: Excerpt
-            type: textarea
-            maxlength: 300
-            buttons: false
-            help: A brief summary or teaser for the article
+      - width: 1/2
+        sections:
+          meta:
+            type: fields
+            fields:
+              metaKeyphrase:
+                label: Focus Keyphrase
+                type: text
+                help: Enter the keyword or keyphrase you want the page to rank for in Google.
+          seoAudit:
+            type: seo-audit
+            keyphraseField: metaKeyphrase
+            synonymsField: metaSynonyms
+            persisted: false
 
   settings:
     label: Settings
