ci: Zero One theme bundled version edition

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "type": "module",
   "version": "3.0.1",
   "private": true,
-  "packageManager": "pnpm@10.24.0",
+  "packageManager": "pnpm@10.26.1",
   "scripts": {
     "dev": "PLAYGROUND=true kirbyup serve src/panel/index.js",
     "build": "kirbyup src/panel/index.js",
     "build:assets": "rm -rf assets && vite build --config src/assets/yoastseo/vite.config.js && vite build --config src/assets/worker/vite.config.js",
     "build:playground": "PLAYGROUND=true pnpm run build && pnpm run build:assets",
+    "build:zero-one": "ZERO_ONE=true pnpm run build && pnpm run build:assets && node scripts/build-zero-one.mjs",
     "extract:messages": "node scripts/extract-translations.mjs && npx po2json messages.pot messages.json --format jed1.x --domain wordpress-seo && sed -i '' 's/\"wordpress-seo\\\\u0004/\"/g' messages.json",
     "test": "vitest",
     "lint": "eslint .",
@@ -17,28 +18,28 @@
     "release": "pnpm run build && pnpm run build:assets && bumpp --all --execute \"npx zx scripts/pre-release.mjs\" && zx scripts/post-release.mjs"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^6.2.0",
+    "@antfu/eslint-config": "^6.7.3",
     "@kirby-tools/licensing": "^0.5.2",
     "@wordpress/i18n": "^5.26.0",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "bumpp": "^10.3.2",
-    "eslint": "^9.39.1",
-    "gettext-extractor": "^4.0.1",
+    "eslint": "^9.39.2",
+    "gettext-extractor": "^4.0.4",
     "gettext-parser": "^8.0.0",
     "happy-dom": "^20.0.11",
     "kirbyup": "^3.4.1",
-    "kirbyuse": "^1.0.0",
+    "kirbyuse": "^1.1.0",
     "ohash": "^2.0.11",
-    "prettier": "^3.7.1",
-    "prettier-plugin-tailwindcss": "^0.7.1",
-    "tailwindcss": "^3.4.18",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^3.4.19",
     "throttleit": "^2.1.0",
     "tinyglobby": "^0.2.15",
     "ufo": "^1.6.1",
     "vite": "~6.3.7",
     "vite-plugin-node-polyfills": "^0.24.0",
-    "vitest": "^4.0.14",
-    "yoastseo": "^3.4.0",
+    "vitest": "^4.0.16",
+    "yoastseo": "~3.4.0",
     "zx": "^8.8.5"
   },
   "pnpm": {
