chore: update Zero One theme build

--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
-      "esbuild",
-      "unrs-resolver"
+      "esbuild"
     ]
   }
 }
