--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,7 @@ playground/ export-ignore
 # Development files
 .vscode/ export-ignore
 tools/ export-ignore
+zero-one/ export-ignore
 .editorconfig export-ignore
 composer.lock export-ignore
 eslint.config.mjs export-ignore
